basic styling for collection page

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -151,6 +151,7 @@ img { max-width: 100%; }
   .product-benefits .two-thirds  {
     margin: 50px;
 }
+  .collection .page-header { height: 400px; }
 #faq .faq .flex-container-no { align-items: flex-start; }
 
   .prog-bar { margin-bottom: 50px; }
@@ -197,6 +198,8 @@ img { max-width: 100%; }
 }
 @media only screen and (min-width: 589px) {
   .accent-padding { padding: 20px; }
+  .accent-padding-tb { padding: 20px 0;}
+
   .half { width: 50%; box-sizing: border-box; }
   footer section {  margin: auto 20px;}
 #faq .faq img { max-width: 150px; }
@@ -210,6 +213,8 @@ img { max-width: 100%; }
 
   .flex-container { display: block; }
   .accent-padding { padding: 10px; }
+  .accent-padding-tb { padding: 10px 0;  }
+
   #atf { height: 90vw; }
   footer section {  margin: 10px;}
   #dye { background-position: -45px; }
@@ -727,6 +732,25 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 .swatch.error code {
   font-family:monospace;
 }
+/*collections*/
+.product-collection {
+    margin: 10px;
+    border: 2px solid #d1cdcd;
+    border-radius: 5%;
+}
+.border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
+#c110002667620 .page-header {
+  background-color: #fdf3ed;
+}
 
-
-
+#c110002012260 .page-header {
+  background-color:  whitesmoke;
+}
+.collection-circle {
+    width: 10px;
+    height: 10px;
+    border: 1px solid #d1cdcd;
+    border-radius: 100%;
+    margin-right: 10px;
+}
+#collection-wrapper { align-items: flex-start }
