--- a/templates/page.flow.liquid
+++ b/templates/page.flow.liquid
@@ -70,20 +70,20 @@
       </div>
       <div id="choose-options">
       <div class="flex-container-no jcc">
-        <img src="{{'purple.png' | asset_url}}" class="color-dye clickable" id="purple"/>
-        <img src="{{'navy.png' | asset_url}}" class="color-dye clickable" id="navy"/>
+        <img src="{{'purple-flow.png' | asset_url}}" class="color-dye clickable" id="purple"/>
+        <img src="{{'navy-flow.png' | asset_url}}" class="color-dye clickable" id="navy"/>
       </div>
        <div class="flex-container-no jcc">
-        <img src="{{'aqua.png' | asset_url}}" class="color-dye clickable" id="aqua"/>
-        <img src="{{'coral.png' | asset_url}}"  class="color-dye clickable" id="coral"/>
+        <img src="{{'aqua-flow.png' | asset_url}}" class="color-dye clickable" id="aqua"/>
+        <img src="{{'coral-flow.png' | asset_url}}"  class="color-dye clickable" id="coral"/>
       </div>
        <div class="flex-container-no jcc">
-        <img src="{{'gray.png' | asset_url}}"  class="color-dye clickable" id="gray"/>
-        <img src="{{'brown.png' | asset_url}}" class="color-dye clickable" id="brown"/>
+        <img src="{{'gray-flow.png' | asset_url}}"  class="color-dye clickable" id="gray"/>
+        <img src="{{'brown-flow.png' | asset_url}}" class="color-dye clickable" id="brown"/>
       </div>
        <div class="flex-container-no jcc">
-        <img src="{{'white.png' | asset_url}}"  class="color-dye clickable" id="white"/>
-        <img src="{{'black.png' | asset_url}}" class="color-dye clickable" id="black"/>
+        <img src="{{'white-flow.png' | asset_url}}"  class="color-dye clickable" id="white"/>
+        <img src="{{'black-flow.png' | asset_url}}" class="color-dye clickable" id="black"/>
       </div>
     </div>
     </div>
