--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -735,7 +735,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 /*collections*/
 .product-collection {
     margin: 10px;
-    border: 2px solid #d1cdcd;
+    border: 1px solid #d1cdcd;
     border-radius: 5%;
 }
 .border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
@@ -753,4 +753,28 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     border-radius: 100%;
     margin-right: 10px;
 }
+.collection-color  {
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin: 5px 5px 5px 0px;
+    box-sizing: border-box;
+}
+.collection p { font-size: 10pt; margin: 5px 0;}
 #collection-wrapper { align-items: flex-start }
+/*.text-lightgray { color:  #d1cdcd; }
+*/.strike-through { text-decoration: line-through; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
