removes a lot of the unnecessary code and updates the html to match the previous layout

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -2,76 +2,155 @@
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
   <meta itemprop="image" content="{{ product.featured_image.src | product_img_url: 'grande' }}">
-    {% unless product.title == "Gift Cards" or product.title == "Select" %}
-  <section class="flex-container-no background-green mo-plus accent-padding fw tac">
-            {% capture product_collection_url %}{{ product.url | within: collection }}{% endcapture %}
-            {% for collection in product.collections %}
-              {% if collection.title == "Women"%}
-                {% for link in linklists.product-sub-nav1.links %}
-                  {% unless link.url == product_collection_url %}
-                    <a href="{{ link.url }}" class="accent-padding subscript" id="sub-nav" onclick="ga('send', 'event', 'Product', 'Click', 'Green Sub Nav');">{{ link.title | escape }}</a>
-                  {% endunless %}
-                {% endfor %}
-              {% elsif collection.title == "Men" %}
-                {% for link in linklists.product-sub-nav1-men.links %}
-                  {% unless link.url == product_collection_url%}
-                    <a href="{{ link.url }}" class="accent-padding subscript" id="sub-nav" onclick="ga('send', 'event', 'Product', 'Click', 'Green Sub Nav');">{{ link.title | escape }}</a>
-                  {% endunless %}
-                {% endfor %}
-              {% endif %}
+   
+<section class="flex-container double-padding">
+    <div class="half accent-padding">
+      <div class="flex-container-no jcc">
+        <div class="left-arrow"><p class="large">⌃</p></div>
+        <div>
+          <img src="{{ featured_image.src | img_url: '2000x2000' }}" alt="{{ image.alt | escape }}" class="fw">
+          {% if product.images.size > 1 %}
+            {% for image in product.images %}
+              <div class="circle"></div>
             {% endfor %}
-    {% endunless %}
-  </section>
-  <section id="product-images">
-     {% unless product.title == "Gift Cards" %}
-        <div id="thumbnails" class="ndo-plus">
-          <ul>
-            {% for image in product.images limit: 1 %}
-            <li><img data-src="{{ image | product_img_url: 'compact' }}" class="border-lightgray" class="product-image lazyload"/></li>
-            {% endfor %}
-            {% for image in product.images limit: 5 offset: 2 %}
-            <li><img data-src="{{ image | product_img_url: 'compact' }}" class="product-image lazyload"/></li>
-            {% endfor %} 
-          </ul>
-        </div>
-      {% endunless %} 
-      {% if product.type == "Closet Pack"%}
-      <div class="mo-plus fw" id="moprice"><h3 class="tac nmb">{{ product.price | money }} <span style="text-decoration: line-through; color: gray;">{% if productq.price < product.compare_at_price_max and product.type == "Closet Pack" %}{{ product.compare_at_price | money }}{% endif %}</span></h3>
-        {% if product.title == "Women's Closet Pack" %}
-          <p class="subscript tac nmt">Save $5 when you buy a closet pack!</p>
-        {% elsif product.title == "Men's Closet Pack" %}
-          <p class="subscript tac nmt">Save $4 when you buy a closet pack!</p>
-        {% endif %}
-      </div>
-      {% endif %}
-      <div class="mo-plus fw">
-        <div class="priceu" style="display: none;">
-          <img src="{{'winterspecial.png' | asset_url}}" style="width: 300px; display: block; margin: 0 auto;" />
-        {% if product.title == "Women's Closet Pack" %}
-          <h3 class="tac nmb">$36.00 <span style="text-decoration: line-through; color: gray;">{% if product.price < product.compare_at_price_max %}$49.00{% endif %}</span></h3>
-        {% else %}
-          <div class="flex-container-no">
-          <h3 class="tar" style="width: 56%; margin-right: 10px">$18.00 <span class="subscript" style="font-weight: 300; margin: 0 5px;">or</span> $12.00 </h3><span class="subscript" style="font-weight: 300;">when you buy 3 <br>or more pairs</span>
-        </div>
           {% endif %}
         </div>
+        <div class="right-arrow"><p class="large">⌃</p></div>
       </div>
-      <img data-src="{{ product.featured_image.src | product_img_url: '2000x2000' }}" alt="{{ product.title }}" id="featured-image" class="lazyload"/>
-      {% unless product.title == "Gift Cards" %}
-        <div id="thumbnails" class="mo-plus" style="display: none;">
-          <ul>
-            {% for image in product.images limit: 1 %}
-            <li><img data-src="{{ image | product_img_url: 'compact' }}" class="border-lightgray product-image lazyload"/></li>
-            {% endfor %}
-            {% for image in product.images limit: 5 offset: 2 %}
-            <li><img data-src="{{ image | product_img_url: 'compact' }}" class="product-image lazyload"/></li>
-            {% endfor %} 
-          </ul>
-        </div>
-        {% endunless %}
-  </section>
+      <p class="tac">{{ product.description }}</p>
+    </div>
+    <div class="half tac accent-padding">
+      <h3>{{ product.title }}</h3>
   
-  {% include 'product-add-to-cart' %}
+  <!--  -->
+
+<form action="/cart/add" method="post" id="product-form-{{ product.id }} t" class="checkout" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+ 
+ 
+  
+  {% if product.available and product.variants.size > 1 %}
+    {% include 'swatch' with 'Color' %}
+  {% endif %} 
+  {% if product.available %}
+    <meta itemprop="priceCurrency" content="{{ shop.currency }}">
+    <link itemprop="availability" href="http://schema.org/InStock">
+    
+   <select name="id" id="productSelect-{{ product.id }}" class="product-single__variants" style="display: none;">
+      {% for variant in product.variants %}
+        <option data-sku="{{ variant.sku }}" value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money_with_currency }}</option>
+      {% endfor %}
+   </select>
+   <select name="quantity" id="quantity">
+     {% for i in (1..10) %}
+     <option value="{{ i }}">{{ i }}</option>
+     {% endfor %}         
+  </select>  
+  {% if product.title == "Gift Cards" %}
+    <div class="spacer"></div>
+  {% else %}
+    <p class="subscript clickable" id="size-chart"><img src="{{'ruler.png' | asset_url}}" class="ruler-icon"/>sizing chart</p>
+  {% endif %}
+  <p class="priceu subscript" id="discount-at-checkout" style="display: none;"><span>*discount applied at checkout</span></p>
+  <button type="submit" name="add" id="add-to-cart-{{ product.id }} add-cart" class="background-green text-white"><span>add to cart</span></button>
+  {% endif %}
+</form>
+</div>
+</section>
+
+<div style="display: none;" id="display-size" class="sizing-chart border-lightgray modal">
+  <div class="accent-padding">
+   <p class="nm klaviyo_header_close tar clickable">✕</p>
+  <table>
+    <tr>
+      <th colspan="2" class="blank-row"></th>
+      <th class="t-size table-title">small</th>
+      <th class="t-size table-title">medium</th>
+      <th class="t-size table-title">large</th>
+    </tr>
+    <tr class="lg">
+      <td rowspan="2" class="table-title"><span>mens</span></td>
+      <td class="table-title lg">US</td>
+      <td>6.5-8</td>
+      <td>8.5-11</td>
+      <td>11.5+</td>
+    </tr>
+    <tr class="dg">
+      <td class="table-title">UK</td>
+      <td>39-41</td>
+      <td>42-44</td>
+      <td> 44+ </td>
+    </tr>
+    <tr class="lg">
+      <td rowspan="2" class="table-title"><span>womens</span></td>
+      <td class="table-title lg">US</td>
+      <td>5-6.5</td>
+      <td>7-8.5</td>
+      <td>9-11.5</td>
+    </tr>
+    <tr class="dg">
+      <td class="table-title">UK</td>
+      <td>35-37</td>
+      <td>38-39</td>
+      <td>40-42</td>
+    </tr>
+  </table>
+</div>
+</div>
+ 
+{% if product.available %}
+<script>
+    $('.swatch').prepend("<p id='color-label'>color:</p>")
+   $('.scrollp').on("click", function() { 
+    var wrapper = $('.shoe-wrapper'); 
+    if ($(this).hasClass('rightp')) { 
+      $(wrapper).animate( { scrollLeft: '+=300' })
+    }
+    else {
+      $(wrapper).animate({scrollLeft: '-=300'});  
+    }
+  }); 
+  var selectCallback_{{ product.id }} = function(variant, selector) {
+
+    // BEGIN SWATCHES
+    if (variant) {
+      var form = jQuery('#' + selector.domIdPrefix).closest('form');
+      for (var i=0,length=variant.options.length; i<length; i++) {
+        var radioButton = form.find('.swatch[data-option-index="' + i + '"] :radio[value="' + variant.options[i] +'"]');
+        if (radioButton.size()) {
+          radioButton.get(0).checked = true;
+        }
+      }
+    }
+    // END SWATCHES
+    timber.productPage({
+      money_format: "{{ shop.money_format }}",
+      variant: variant,
+      selector: selector,
+      product_id: '{{ product.id }}',
+      translations: {
+      add_to_cart : "{{ settings.add_to_cart_text }}",
+      sold_out : "Sold Out",
+      unavailable : "Unavailable"
+    }
+                       });
+  };
+  jQuery(function($) {
+    new Shopify.OptionSelectors('productSelect-{{ product.id }}', {
+                                product: {{ product | json }},
+                                onVariantSelected: selectCallback_{{ product.id }},
+                                enableHistoryState: true
+                                });
+
+
+  });
+</script>
+{% endif %}
+
+ 
+
+<!--  -->
+
+
    <section class="product-benefits background-blue flex-container">
     <div class="third">
     </div>
