swaps sizing options with paca icon and sets logic to change the paca to filled when selected

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -553,6 +553,9 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     font-size: 10pt;
     color: white;
 }
+.small-icon { height: 30px; }
+.medium-icon { height: 40px; }
+.large-icon { height: 50px; }
 /*faq*/
 .half-no { width: 50%; }
 .closed span.answer { display: none; }
